tests/snapshots/smoke__make_math_tree.snap
---
source: tests/smoke.rs
expression: tree
---
Node {
    kind: Kind(3),
    text_len: 13,
    children: [
        Node {
            kind: Kind(3),
            text_len: 9,
            children: [
                Token {
                    text_len: 1,
                    kind: Kind(2),
                    text: "1",
                },
                Token {
                    text_len: 1,
                    kind: Kind(0),
                    text: " ",
                },
                Token {
                    text_len: 1,
                    kind: Kind(1),
                    text: "+",
                },
                Token {
                    text_len: 1,
                    kind: Kind(0),
                    text: " ",
                },
                Node {
                    kind: Kind(3),
                    text_len: 5,
                    children: [
                        Token {
                            text_len: 1,
                            kind: Kind(2),
                            text: "2",
                        },
                        Token {
                            text_len: 1,
                            kind: Kind(0),
                            text: " ",
                        },
                        Token {
                            text_len: 1,
                            kind: Kind(1),
                            text: "*",
                        },
                        Token {
                            text_len: 1,
                            kind: Kind(0),
                            text: " ",
                        },
                        Token {
                            text_len: 1,
                            kind: Kind(2),
                            text: "3",
                        },
                    ],
                },
            ],
        },
        Token {
            text_len: 1,
            kind: Kind(0),
            text: " ",
        },
        Token {
            text_len: 1,
            kind: Kind(1),
            text: "+",
        },
        Token {
            text_len: 1,
            kind: Kind(0),
            text: " ",
        },
        Token {
            text_len: 1,
            kind: Kind(2),
            text: "4",
        },
    ],
}
