tests/snapshots/smoke__make_sexpr_tree.snap
---
source: tests/smoke.rs
expression: tree
---
Node {
    kind: Kind(4),
    text_len: 15,
    children: [
        Token {
            text_len: 1,
            kind: Kind(1),
            text: "(",
        },
        Token {
            text_len: 1,
            kind: Kind(3),
            text: "+",
        },
        Token {
            text_len: 1,
            kind: Kind(0),
            text: " ",
        },
        Node {
            kind: Kind(4),
            text_len: 8,
            children: [
                Token {
                    text_len: 1,
                    kind: Kind(1),
                    text: "(",
                },
                Token {
                    text_len: 1,
                    kind: Kind(3),
                    text: "*",
                },
                Token {
                    text_len: 1,
                    kind: Kind(0),
                    text: " ",
                },
                Token {
                    text_len: 2,
                    kind: Kind(3),
                    text: "15",
                },
                Token {
                    text_len: 1,
                    kind: Kind(0),
                    text: " ",
                },
                Token {
                    text_len: 1,
                    kind: Kind(3),
                    text: "2",
                },
                Token {
                    text_len: 1,
                    kind: Kind(2),
                    text: ")",
                },
            ],
        },
        Token {
            text_len: 1,
            kind: Kind(0),
            text: " ",
        },
        Token {
            text_len: 2,
            kind: Kind(3),
            text: "62",
        },
        Token {
            text_len: 1,
            kind: Kind(2),
            text: ")",
        },
    ],
}
